--- a/angular14app/src/index.html
+++ b/angular14app/src/index.html
@@ -6,10 +6,14 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script>
+    window.start = new Date().getTime()
+    console.log("started at " + window.start)
+  </script>
 </head>
 <body>
   <app-root></app-root>
-
+  <script src="./assets/web-component-a-01.js"></script>
   <script src="./assets/web-component-a.js"></script>
 </body>
 </html>
