--- a/deployedapp/src/main/resources/web/index.html
+++ b/deployedapp/src/main/resources/web/index.html
@@ -3,12 +3,16 @@
   <title>Angular14app</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="https://public-cloud.abstratium.dev/d/ant-kutschera-gmail-comchcdg/deployedapp-jarbcajg/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script>
+    window.start = new Date().getTime()
+    console.log("started at " + window.start)
+  </script>
 <link rel="stylesheet" href="https://public-cloud.abstratium.dev/d/ant-kutschera-gmail-comchcdg/deployedapp-jarbcajg/styles.css"></head>
 <body>
   <app-root></app-root>
-
-  <script src="https://public-cloud.abstratium.dev/d/ant-kutschera-gmail-comchcdg/deployedapp-jarbcajg/assets/web-component-a.js"></script>
+  <script src="https://public-cloud.abstratium.dev/d/ant-kutschera-gmail-comchcdg/deployedapp-jarbcajg//assets/web-component-a-01.js"></script>
+  <script src="https://public-cloud.abstratium.dev/d/ant-kutschera-gmail-comchcdg/deployedapp-jarbcajg//assets/web-component-a.js"></script>
 <script src="https://public-cloud.abstratium.dev/d/ant-kutschera-gmail-comchcdg/deployedapp-jarbcajg/runtime.js" type="module"></script>
 <script src="https://public-cloud.abstratium.dev/d/ant-kutschera-gmail-comchcdg/deployedapp-jarbcajg/polyfills.js" type="module"></script>
 <script src="https://public-cloud.abstratium.dev/d/ant-kutschera-gmail-comchcdg/deployedapp-jarbcajg/main.js" type="module"></script>
