--- a/angular14app/src/index.html
+++ b/angular14app/src/index.html
@@ -15,5 +15,6 @@
   <app-root></app-root>
   <script src="./assets/web-component-a-01.js"></script>
   <script src="./assets/web-component-a.js"></script>
+  <p>See https://github.com/maxant/angularelements</p>
 </body>
 </html>
