--- a/deployedapp/src/main/resources/web/index.html
+++ b/deployedapp/src/main/resources/web/index.html
@@ -17,4 +17,7 @@
 <script src="https://public-cloud.abstratium.dev/d/ant-kutschera-gmail-comchcdg/deployedapp-jarbcajg/polyfills.js" type="module"></script>
 <script src="https://public-cloud.abstratium.dev/d/ant-kutschera-gmail-comchcdg/deployedapp-jarbcajg/main.js" type="module"></script>
 
+  <p>See https://github.com/maxant/angularelements</p>
+
+
 </body></html>
